[gd_scene load_steps=4 format=3 uid="uid://8321hydj8qfj"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_qxmok"]

[sub_resource type="LabelSettings" id="LabelSettings_gun1o"]
line_spacing = 0.0
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3mepa"]
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="card" type="Control"]
custom_minimum_size = Vector2(200, 320)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qxmok")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.258824, 0.4, 1)

[node name="card_margin" type="MarginContainer" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="card_content" type="VBoxContainer" parent="background/card_margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="header_background" type="ColorRect" parent="background/card_margin/card_content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
color = Color(0.423529, 0.623529, 0.847059, 1)

[node name="header_content" type="HBoxContainer" parent="background/card_margin/card_content/header_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="cost_background" type="ColorRect" parent="background/card_margin/card_content/header_background/header_content"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
color = Color(1, 0.929412, 0.690196, 1)

[node name="cost" type="Label" parent="background/card_margin/card_content/header_background/header_content/cost_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 0
text = "00"
label_settings = SubResource("LabelSettings_gun1o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="title_container" type="CenterContainer" parent="background/card_margin/card_content/header_background/header_content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="Label" parent="background/card_margin/card_content/header_background/header_content/title_container"]
layout_mode = 2
text = "Placeholder"
label_settings = SubResource("LabelSettings_3mepa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="illust_placeholder" type="ColorRect" parent="background/card_margin/card_content"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="description_background" type="ColorRect" parent="background/card_margin/card_content"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.196078, 0.368627, 0.552941, 1)

[node name="description_container" type="CenterContainer" parent="background/card_margin/card_content/description_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="description" type="RichTextLabel" parent="background/card_margin/card_content/description_background/description_container"]
layout_mode = 2
text = "Long placeholder.
Line placeholder."
fit_content = true
scroll_active = false
autowrap_mode = 0
